@@ -231,11 +231,12 @@ let primitives_table = create_hashtable 57 [
   "%gefloat", Pfloatcomp Cge;
   "%string_length", Pstringlength;
   "%string_safe_get", Pstringrefs;
+  "%string_safe_set", Pbytessets;
   "%string_unsafe_get", Pstringrefu;
+  "%string_unsafe_set", Pbytessetu;
   "%bytes_length", Pbyteslength;
   "%bytes_safe_get", Pbytesrefs;
   "%bytes_safe_set", Pbytessets;
-  "%string_safe_set", Pbytessets;  
   "%bytes_unsafe_get", Pbytesrefu;
   "%bytes_unsafe_set", Pbytessetu;
   "%array_length", Parraylength Pgenarray;
